--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-     "predeploy":"npm run build",
+    "predeploy":"npm run build",
+    "init":"npm install",
     "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
